--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: 3.1.0
   http: ^0.13.3
+  flutter_local_notifications: ^9.0.2
 
 dev_dependencies:
   flutter_test:
